--- a/Challenge 2 Project.html
+++ b/Challenge 2 Project.html
@@ -9,13 +9,23 @@
 </head>
 
 <body>
-    <nav>
-    <a href=""</a>
-    <a href=""</a>  
-    <a href=""</a>
-    <a href=""</a>
+    <header>
+        <nav>
+        <ul>
+        <li><a href="">About Me</a>|</li>
+        <a href="">Work</a> | 
+        <a href=""Contact Me</a> |
+        <a href=""Resume</a> |
+        </ul>
+    </header>
     </nav>
-
 </body>
+
+<section>
+    <h1>About Me</h1>
+    <h2 >Work</h2>
+</section>
+
+<footer>Contact Me</footer>
 
 </html>
