--- a/Challenge 2 Project.html
+++ b/Challenge 2 Project.html
@@ -4,27 +4,35 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type: "text/css" href="."/>
+<link rel="stylesheet" type="" "text/css" href="./Challengle 2 CSS FIle.css"/>
 <title>Courtney's Page</title>
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="text-right">
         <ul>
-        <li><a href="">About Me</a>|</li>
-        <a href="">Work</a> | 
-        <a href=""Contact Me</a> |
-        <a href=""Resume</a> |
+        <li><a class="navbarlink" href="">About Me</a></li>
+        <li><a class="navbarlink" href="">Work</a></li>
+        <li><a class="navbarlink" href="">Contact Me</a></li>
+        <li><a class="navbarlink" href="">Resume</a></li>
         </ul>
     </header>
     </nav>
 </body>
 
-<section>
-    <h1>About Me</h1>
-    <h2 >Work</h2>
-</section>
+<main>
+    <section> <!-- About Me -->
+        <h1>About Me</h1>
+
+    </section>
+
+    <section> <!--Projects -->
+        <h1>Projects</h1>
+
+    </section> 
+    
+</main>
 
 <footer>Contact Me</footer>
 
