Pushing New Code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <li><a class="navbarlink" href="">Resume</a></li>
             </ul>
         </nav>     
-    </header>
+        <img class="hero" src="./images/image.png" alt="HeroImage">
+        <h1 class="hero-text">Courtney's Page </h1>
+        </header>
 
 <main>
     <section> <!-- About Me -->
@@ -26,6 +28,11 @@
             <p>
                 UP DATE AND ENTER IN ABOUT ME SECTION HERE.
             </p>
+    </section>
+
+    <section>
+        div class="Box-1"
+        <img src="./images/redImage.png" alt="Image for Box 1"/>
     </section>
 
     <section> <!--Projects -->
