--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     </section>
 
     <section>
-        div class="Box-1"
-        <img src="./images/redImage.png" alt="Image for Box 1"/>
+        <div>class="Box-1"
+            <img src="./images/redImage.png" alt="Image for Box 1"/>
+        </div> 
     </section>
 
     <section> <!--Projects -->
