--- a/index.html
+++ b/index.html
@@ -31,8 +31,24 @@
     </section>
 
     <section>
-        <div>class="Box-1"
+        <div class="Box-1">
             <img src="./images/redImage.png" alt="Image for Box 1"/>
+        </div> 
+    </section>
+
+
+
+    <section>
+        <div class="flexible-container">
+            <img src="./images/BlueBox.png" alt="Image for Box 2"/>
+            <img src="./images/GreenBox.png" alt="Image for Box 3"/>
+        </div> 
+    </section>
+
+    <section>
+        <div class="flex-container2">
+            <img src="./images/PinkBox.png" alt="Image for Box 4"/>
+            <img src="./images/YellowBox.png" alt="Image for Box 5"/>
         </div> 
     </section>
 
