--- a/index.html
+++ b/index.html
@@ -37,16 +37,15 @@
     </section>
 
 
-
     <section>
-        <div class="flexible-container">
-            <img src="./images/BlueBox.png" alt="Image for Box 2"/>
-            <img src="./images/GreenBox.png" alt="Image for Box 3"/>
+        <div id="flexible-container">
+            <img id="photo1" src="./images/BlueBox.png" alt="Image for Box 2"/>
+            <img id="photo2" src="./images/GreenBox.png" alt="Image for Box 3"/>
         </div> 
     </section>
 
     <section>
-        <div class="flex-container2">
+        <div class="flexible-container2">
             <img src="./images/PinkBox.png" alt="Image for Box 4"/>
             <img src="./images/YellowBox.png" alt="Image for Box 5"/>
         </div> 
