--- a/index.html
+++ b/index.html
@@ -30,31 +30,26 @@
             </p>
     </section>
 
-    <section>
-        <div class="Box-1">
-            <img src="./images/redImage.png" alt="Image for Box 1"/>
-        </div> 
-    </section>
-
-
-    <section>
-        <div id="flexible-container">
-            <img id="photo1" src="./images/BlueBox.png" alt="Image for Box 2"/>
-            <img id="photo2" src="./images/GreenBox.png" alt="Image for Box 3"/>
-        </div> 
-    </section>
-
-    <section>
-        <div class="flexible-container2">
-            <img src="./images/PinkBox.png" alt="Image for Box 4"/>
-            <img src="./images/YellowBox.png" alt="Image for Box 5"/>
-        </div> 
-    </section>
-
+<div class="work-container">
     <section> <!--Projects -->
         <h1>Projects</h1>
     </section> 
+
+    <section>
     
+        <div class="larger_image">
+            <img src="./images/redImage.png" alt="Image for Box 1"/>
+        </div> 
+        <div class="placeholder_container">
+            <img src="./images/BlueBox.png" alt="Image for Box 2"/>
+            <img src="./images/BlueBox.png" alt="Image for Box 3"/>
+            <img src="./images/BlueBox.png" alt="Image for Box 4"/>
+            <img src="./images/BlueBox.png" alt="Image for Box 5"/>
+        </div> 
+    
+    </section>
+</div>
+
 </main>
 
 <footer>Contact Me</footer>
