--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
 <main>
-    <section> <!-- About Me -->
+    <section class="About_Me"> <!-- About Me -->
         <h1>About Me</h1>
             <p>
                 UP DATE AND ENTER IN ABOUT ME SECTION HERE.
@@ -52,6 +52,6 @@
 
 </main>
 
-<footer>Contact Me</footer>
+<footer class="Contact_Me"> Contact Me</footer>
 </body>
 </html>
