--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
         <div class="larger_image">
             <img src="./images/redImage.png" alt="Image for Box 1"/>
         </div> 
-        <div class="placeholder_container">
+
+        <div class="placeholder_container"/>
             <img src="./images/BlueBox.png" alt="Image for Box 2"/>
             <img src="./images/BlueBox.png" alt="Image for Box 3"/>
-            <img src="./images/BlueBox.png" alt="Image for Box 4"/>
-            <img src="./images/BlueBox.png" alt="Image for Box 5"/>
+                <div class="break">
+                <img src="./images/BlueBox.png" alt="Image for Box 4"/>   
+                <img src="./images/BlueBox.png" alt="Image for Box 5"/>
+            </div>
+                      
         </div> 
     
     </section>
