--- a/index.html
+++ b/index.html
@@ -12,48 +12,77 @@
     <header>
         <nav class="text-right">
             <ul>
-                <li><a class="navbarlink" href="">About Me</a></li>
-                <li><a class="navbarlink" href="">Work</a></li>
-                <li><a class="navbarlink" href="">Contact Me</a></li>
-                <li><a class="navbarlink" href="">Resume</a></li>
+                <li><a class="navbarlink" href="#contactme">Contact Me</a></li>
+                <li><a class="navbarlink" href="#work">Work</a></li>
+                <li><a class="navbarlink" href="#about">About Me</a></li>
             </ul>
         </nav>
-        <img class="hero" src="./images/image.png" alt="HeroImage">
+        <img class="hero" src="/images/Guanella Pass Photo.jpg" alt="HeroImage">
         <h1 class="hero-text">Courtney's Page </h1>
     </header>
 
     <main>
-        <section class="About_Me"> <!-- About Me --> 
+        <section class="About_Me" id="about"> <!-- About Me -->
             <h1>About Me</h1>
-            <p>
-                UPDATE AND ENTER IN ABOUT ME SECTION HERE.
-            </p>
-            <div class="larger_image">
-                <img src="./images/redImage.png" alt="Image for Box 1" />
-            </div>
+            <div class="flex">
+                <img src="./images/slackPhoto.jpg" alt="Image for Box 1" class="larger_image" />
 
+
+                <p>
+                    Aspiring Full-Stack Web Developer. Check back soon for more.
+                </p>
+
+            </div>
         </section>
 
-            <div class="work-container">
-            <section>
-                <h1>Projects</h1>         
+        <div class="work-container" id="work">
+            <section >
+                <h1>Projects</h1>
                 <div class="image_1">
-                    <div class="box"><img src="./images/BlueBox.png" alt="Image for Box 2" /> </div>
-                    <div class="box"><img src="./images/BlueBox.png" alt="Image for Box 3" /> </div>  
+                    <div class="box box1">
+                        <div>
+                            <h1>Coming Soon</h1>
+                        </div>
+                    </div>
+
+                    <div class="box box1">
+                        <div>
+                            <h1>Coming Soon</h1>
+                        </div>
+                    </div>
+
+                    <div class="box box1">
+                        <div>
+                            <h1>Coming Soon</h1>
+                        </div>
+                    </div>
+
+                    <div class="box box1">
+                        <div>
+                            <h1>Coming Soon</h1>
+                        </div>
+                    <!-- </div> -->
+                    <!-- <div class="box"><img src="./images/ComingSoon.jpg" alt="Image for Box 3" /> </div> -->
                 </div>
-                <hr>
-                <div class="image_2">
-                    <div class="box"> <img src="./images/BlueBox.png" alt="Image for Box 4" /> </div>
-                    <div class="box"> <img src="./images/BlueBox.png" alt="Image for Box 5" /> </div>
-                </div>
+                <!-- <hr> -->
+                <!-- <div class="image_2">
+                    <div class="box"> <img src="./images/ComingSoon.jpg" alt="Image for Box 4" /> </div>
+                    <div class="box"> <img src="./images/ComingSoon.jpg" alt="Image for Box 5" /> </div>
+                </div> -->
 
             </section>
-            </div>
-        
+        </div>
+
 
     </main>
 
-    <footer class="Contact_Me"> Contact Me</footer>
+    <footer class="Contact_Me" id="contactme">
+        <h2>Contact me</h2>
+        <ul>
+            <li><a href = "csherman177@gmail.com">csherman177@gmail.com</a></li>s       
+        </ul>
+    </footer>
+    
 </body>
 
 </html>
